--- a/src/components/Image.css
+++ b/src/components/Image.css
@@ -1,3 +1,15 @@
 .img-container img {
     width: 100%;
 }
+.img-desktop {
+    display: none;
+}
+@media (min-width: 768px) {
+    .img-mobile {
+        display: none;
+    }
+    .img-container img.img-desktop {
+        display: block;
+        width: auto;
+    }
+}
