--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -1,3 +1,20 @@
 main {
     padding: 1.5rem;
 }
+@media (min-width: 768px) {
+    #root {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: auto auto;
+        padding: 3%;
+        max-width: 70%;
+        max-height: 80vh;
+    }
+    .img-container {
+        grid-column: 2 / 3;
+    }
+    main {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+}
