--- a/src/components/SignUp/Form.css
+++ b/src/components/SignUp/Form.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .input-container {
     display: flex;
