--- a/src/components/SignUp/Info.css
+++ b/src/components/SignUp/Info.css
@@ -1,5 +1,6 @@
 .info h1 {
     color: var(--dark-slate-grey);
+    font-size: 2.5rem;
 
 }
 .info ul {
@@ -9,6 +10,12 @@
     list-style: none;
     display: flex;
     gap: 20px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+
+.info p {
+    margin-bottom: 30px;
 }
 .info p,
 .info li {
