--- a/src/App.css
+++ b/src/App.css
@@ -59,4 +59,13 @@ body {
   font-weight: 400;
 
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  body {
+    justify-content: center;
+  }
 }
