--- a/src/components/SignUp/Info.css
+++ b/src/components/SignUp/Info.css
@@ -22,3 +22,9 @@
     color: var(--charcoal-grey);
     font-weight: 400;
 }
+
+@media (min-width: 768px) {
+    .info h1 {
+        font-size: 3rem;
+    }
+}
