--- a/src/components/Image.css
+++ b/src/components/Image.css
@@ -10,11 +10,13 @@
     }
     .img-container {
         max-width: 100%;
+        max-height: inherit;
     }
     .img-container img.img-desktop {
         display: block;
-        width: auto;
-        height: 90%;
-
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        object-position: right;
     }
 }
