--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -16,6 +16,9 @@ main {
     main {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
-        width: 380px;
+        min-width: 380px;
+
+        margin-top: calc(-30px - 1vh);
+
     }
 }
