--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -6,4 +6,19 @@
     text-align: center;
     border-radius: 10px;
     padding: 20px;
+    transition: background .3s;
+    transition: box-shadow .3s;
+}
+.button:hover {
+    cursor: pointer;
+    background: rgb(255,83,112);
+background: linear-gradient(90deg, rgba(255,83,112,1) 5%, rgba(255,103,62,1) 84%);
+-webkit-box-shadow: 0px 0px 34px 0px rgba(255,83,112,1);
+-moz-box-shadow: 0px 0px 34px 0px rgba(255,83,112,1);
+box-shadow: 0px 0px 34px 0px rgba(255,83,112,1);
+}
+@media (max-width: 375px) {
+    .button {
+        font-size: 16px;
+    }
 }
